--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>MarkT editor</title>
     <link rel="stylesheet" href="./styles.css">
 
-    <link href="./prism.css" rel="stylesheet" />
-    <script src="./prism.js"></script>
+    <link href="./MarkT/prism.css" rel="stylesheet" />
+    <script src="./MarkT/prism.js"></script>
 </head>
 <body>
     <button id="export" onclick="saveToFile()">Export File</button>
@@ -25,7 +25,7 @@
     <div id="resizer" class="resizer"></div>
     <div id="output"></div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./MarkT/script.js"></script>
 </body>
 
 
