--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>MarkT editor</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./MarkT/styles.css">
 
     <link href="./MarkT/prism.css" rel="stylesheet" />
     <script src="./MarkT/prism.js"></script>
+    <script src="./MarkT/script.js"></script>
 </head>
 <body>
     <button id="export" onclick="saveToFile()">Export File</button>
@@ -25,7 +26,7 @@
     <div id="resizer" class="resizer"></div>
     <div id="output"></div>
     </div>
-    <script src="./MarkT/script.js"></script>
+    
 </body>
 
 
