--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link href="./MarkT/prism.css" rel="stylesheet" />
     <script src="./MarkT/prism.js"></script>
-    <script src="./MarkT/script.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
     <button id="export" onclick="saveToFile()">Export File</button>
