--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>MarkT editor</title>
-    <link rel="stylesheet" href="./MarkT/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 
-    <link href="./MarkT/prism.css" rel="stylesheet" />
-    <script src="./MarkT/prism.js"></script>
+    <link href="./prism.css" rel="stylesheet" />
+    <script src="./prism.js"></script>
     <script src="./script.js"></script>
 </head>
 <body>
