--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>MarkT editor</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./MarkT/styles.css">
 
-    <link href="./prism.css" rel="stylesheet" />
-    <script src="./prism.js"></script>
-    <script src="./script.js"></script>
+    <link href="./MarkT/prism.css" rel="stylesheet" />
+    <script src="./MarkT/prism.js"></script>
 </head>
 <body>
+    <script src="./MarkT/script.js"></script>
     <button id="export" onclick="saveToFile()">Export File</button>
     <input id="filename" oninput="adjustWidthToContent(this)"></input><span id="extension">.markT</span>
     <input type="file" id="import" onchange="importFile(this.files[0])"></input>
