--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles.css">
 
     <link href="./prism.css" rel="stylesheet" />
-    <script src="./prism.js"></script>
+    <script src="./prism.js" data-manual></script>
 </head>
 <body>
     <script src="./script.js"></script>
