--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>MarkT editor</title>
     <link rel="stylesheet" href="./styles.css">
 
-    <link href="./prism.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-okaidia.min.css" rel="stylesheet" />
     <script src="./prism.js" data-manual></script>
 </head>
 <body>
