--- a/editor/index.html
+++ b/editor/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <script src="./script.js"></script>
-    <button id="export" onclick="saveToFile()">Export File</button>
-    <input id="filename" oninput="adjustWidthToContent(this)"></input><span id="extension">.markT</span>
-    <input type="file" id="import" onchange="importFile(this.files[0])"></input>
+    <button id="export" onclick="saveToFile()">Download</button>
+    <input id="filename" oninput="adjustWidthToContent(this)"></input><span id="extension">.mt</span>
+    <label for="import" id="importBtn">Import File</label>
+    <input type="file" id="import" onchange="importFile(this.files[0])" style="visibility: hidden;" accept=".mT,.markT"></input>
     <div id="findReplaceModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
@@ -22,7 +23,7 @@
         </div>
     </div>
     <div class="container">
-    <textarea id="editor" placeholder="Type your MarkT here..."></textarea>
+        <textarea id="editor" contenteditable="true" style="border: 1px solid #ccc; min-height: 100px;"></textarea>
     <div id="resizer" class="resizer"></div>
     <div id="output"></div>
     </div>
