Added new blog, new features

--- a/blogs/firstBlog/index.html
+++ b/blogs/firstBlog/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>firstBlog</title>
+    <title>First Blog</title>
     <link rel="stylesheet" href="./styles.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-okaidia.min.css" rel="stylesheet" />
@@ -11,7 +11,7 @@
 <body>
     <script src="./script.js"></script>
     <div class="container">
-    <div id="output" data-file="firstBlog.mt"></div>
+    <div id="output" data-file="firstBlog.markT"></div>
     </div>
     
 </body>
