--- a/blogs/tags_with_params/index.html
+++ b/blogs/tags_with_params/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>real</title>
+    <title>tags with params</title>
     <link rel="stylesheet" href="./styles.css">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-okaidia.min.css" rel="stylesheet" />
@@ -11,7 +11,7 @@
 <body>
     <script src="./script.js"></script>
     <div class="container">
-    <div id="output" data-file="real.markT"></div>
+    <div id="output" data-file="tags_with_params.mt"></div>
     </div>
     
 </body>
